Appareently setting body to 100% breaks the nav bar so hopefully this fixes it *sigh*

--- a/web.css
+++ b/web.css
@@ -24,7 +24,7 @@ html{
 }
 body{
   margin: 0;
-  height: 100%;
+  
 }
 h1 ,h2, h3, p, ul, li{
   padding: 0;
